--- a/imgui.ini
+++ b/imgui.ini
@@ -1,19 +1,101 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=75,23
+Size=1095,567
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=631,193
+ViewportPos=1306,268
 ViewportId=0xE927CF2F
 Size=550,739
 Collapsed=0
 
 [Window][Hello, world!]
-ViewportPos=125,144
+ViewportPos=121,167
 ViewportId=0xEBE6C6E6
 Size=273,680
 Collapsed=0
+
+[Window][ImPlot Demo]
+ViewportPos=1362,131
+ViewportId=0x6C351E99
+Size=558,750
+Collapsed=0
+
+[Table][0xBF3CBA1D,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xD3F25573,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x343BEAD0,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xAD32BB6A,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+
+[Table][0xD4E274A8,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xD0AEA245,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x8675D9AC,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0x703DD030,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0x22B77DC7,3]
+RefScale=13
+Column 0  Width=108 Sort=0v
+Column 1  Width=63
+Column 2  Width=-1
+
+[Table][0x46991A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0x6DF052BA,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=1
+Column 4  Weight=1.0000
+Column 5  Width=-1
 
 [Docking][Data]
 
