--- a/FuzzyLogic.vcxproj.filters
+++ b/FuzzyLogic.vcxproj.filters
@@ -18,9 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="libs\glad\src\glad.c">
       <Filter>Resource Files</Filter>
     </ClCompile>
@@ -45,8 +42,17 @@
     <ClCompile Include="libs\imgui-docking\src\imgui_widgets.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\FuzzyRule.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="libs\implot-0.8\src\implot.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="libs\implot-0.8\src\implot_demo.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="libs\implot-0.8\src\implot_items.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
