--- a/imgui.ini
+++ b/imgui.ini
@@ -1,13 +1,16 @@
 [Window][Debug##Default]
-Pos=75,23
-Size=1095,567
+ViewportPos=265,329
+ViewportId=0x9F5F46A1
+Size=1251,567
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1306,268
-ViewportId=0xE927CF2F
-Size=550,739
+ViewportPos=1277,326
+ViewportId=0xA4D966FE
+Pos=281,0
+Size=277,750
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Hello, world!]
 ViewportPos=121,167
@@ -16,10 +19,11 @@ Size=273,680
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=1362,131
-ViewportId=0x6C351E99
-Size=558,750
+ViewportPos=1277,326
+ViewportId=0xA4D966FE
+Size=279,750
 Collapsed=0
+DockId=0x00000002,0
 
 [Table][0xBF3CBA1D,3]
 Column 0  Weight=1.0000
@@ -98,4 +102,7 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=1277,326 Size=558,750 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=279,750 Selected=0x6C351E99
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=277,750 Selected=0xE927CF2F
 
