--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-ViewportPos=369,92
+ViewportPos=571,-17
 ViewportId=0x9F5F46A1
 Size=1094,592
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=683,137
+ViewportPos=709,168
 ViewportId=0xA4D966FE
 Pos=496,0
 Size=520,810
@@ -19,7 +19,7 @@ Size=273,680
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=683,137
+ViewportPos=709,168
 ViewportId=0xA4D966FE
 Size=494,810
 Collapsed=0
@@ -102,7 +102,7 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=683,137 Size=1016,810 Split=X
+DockNode    ID=0x00000001 Pos=709,168 Size=1016,810 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,750 Selected=0x6C351E99
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=520,750 Selected=0xE927CF2F
 
